[package]
authors = ["Stephan Eckes <stephan@neodsp.com>"]
categories = ["multimedia::audio"]
description = "A simple library to read and write audio files on your disk."
edition = "2024"
keywords = ["audio", "io", "mp3", "neodsp", "wav"]
license = "MIT OR Apache-2.0"
name = "audio-io"
readme = "README.md"
repository = "https://github.com/neodsp/audio-io"
rust-version = "1.88"
version = "0.3.0"

[dependencies]
approx = "0.5"
audioadapter-buffers = "2"
hound = "3.5"
num = "0.4"
rubato = "1"
symphonia = "0.5"
thiserror = "2"

audio-blocks = { version = "0.6", optional = true }

[dev-dependencies]
audio-blocks = { version = "0.6" }

[features]
audio-blocks = ["dep:audio-blocks"]
default = ["all-codecs"]

# All codecs including royalty-encumbered formats (MP3, AAC, etc.)
all-codecs = ["symphonia/all"]

aac = ["symphonia/aac"]
adpcm = ["symphonia/adpcm"]
aiff = ["symphonia/aiff"]
alac = ["symphonia/alac"]
caf = ["symphonia/caf"]
flac = ["symphonia/flac"]
isomp4 = ["symphonia/isomp4"]
mkv = ["symphonia/mkv"]
mp1 = ["symphonia/mp1"]
mp2 = ["symphonia/mp2"]
mp3 = ["symphonia/mp3"]
ogg = ["symphonia/ogg"]
pcm = ["symphonia/pcm"]
vorbis = ["symphonia/vorbis"]
wav = ["symphonia/wav"]
